--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             rel="stylesheet"
         />
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaYxWkXa4TmET6fBVin1q4oYNzpJgE_qU"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaYxWkXa4TmET6fBVin1q4oYNzpJgE_qU&libraries=drawing"></script>
     </head>
     <body class="mat-typography">
         <app-root></app-root>
